# Examen_Parcial_2_Gabriel_Kaakedjian

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: numero.cpp  numero.h
Ejercicio2/: dia_semana.cpp  dia_semana.h
Ejercicio3/: calificaciones.cpp  calificaciones.h
Ejercicio4/: promocion.cpp  promocion.h
